# plumb.rs

./: .gitignore  Cargo.toml  README.md
plumb-api/: Cargo.toml
plumb-api/src/: db.rs  main.rs  models.rs  schema.sql
plumb-rs/: Cargo.toml
plumb-src/: Cargo.toml  test_data.csv
plumb-src/src/: connector.rs  csv.rs  lib.rs  source.rs  transformation.rs  websocket.rs
plumb-src/src/connectors/: csv.rs  mod.rs  websocket.rs
plumb-ui/: app.js  index.html  styles.css
src/: models.rs
