[package]
name = "plumb-src"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = {version = "0.26.1", features = ["native-tls"]}
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
csv = "1.3.1"
tokio-stream = "0.1.17"
